--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@
   </head>
   <body>
 <header>
-    <section>
-<h1>Check all link is working or not</h1>
+    <section class="container text-center ">
+   <h1 class="mt-3 mb-4">Ai Universe Hub</h1>
+   <button class=" btn btn-lg btn-danger mb-4">Sort By date</button>
     </section>
 </header>
 <main>
-    <section>
+    <section class="container">
+<!-- card all -->
+<div class="row row-cols-1 row-cols-md-3 g-4 " id="card-container">
+   
+  </div>
 
+  <!-- modal start -->
+  <!-- modal end -->
     </section>
 </main>
 <footer>
-    <section></section>
+    <section>
+ 
+        
+    </section>
 </footer>
         <!-- js link goes here -->
     <script src="./script/api.js"></script>
