--- a/index.html
+++ b/index.html
@@ -30,10 +30,6 @@
   <!-- Modal start -->
   <section>
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detailsModal">
-        Launch demo modal
-    </button>
-
     <!-- Modal -->
     <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -58,6 +54,8 @@
             see All
         </button> -->
     </section>
+
+</div> -->
 </footer>
         <!-- js link goes here -->
     <script src="./script/api.js"></script>
