complete-modal-and-slice

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     </section>
 </main>
 <footer>
-    <section>
+    <section class="container text-center">
     
-        <!-- <button class="btn-lg btn-danger">
+        <button class="btn-lg btn btn-danger" id="see-all" onclick="loadFetch()">
             see All
-        </button> -->
+        </button>
     </section>
 
-</div> -->
+</div> 
 </footer>
         <!-- js link goes here -->
     <script src="./script/api.js"></script>
