create-slice-and-see-all-btn

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </section>
 </main>
 <footer>
-    <section class="container text-center">
+    <section class="container text-center" id="see-All">
     
-        <button class="btn-lg btn btn-danger" id="see-all" onclick="loadFetch()">
-            see All
-        </button>
+        <button onclick="showAllDataTogether()" class="btn-danger btn btn-lg p-3 my-4" >
+            See ALL
+          </button>
     </section>
 
 </div> 
