--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <!-- bootstrap link goes here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- font awesome link goes her -->
-    <!-- <script
-    src="https://kit.fontawesome.com/ce32527ea4.js"
-    crossorigin="anonymous"
-  ></script> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <!-- custom css link goes here -->
   <link rel="stylesheet" href="./style.css">
@@ -19,7 +15,7 @@
 <header>
     <section class="container text-center ">
         <h1 class="mt-3 mb-4">Ai Universe Hub</h1>
-        <button class=" btn btn-lg btn-danger mb-4">Sort By date</button>
+        <button class=" btn btn-lg btn-danger mb-4" id="sort-button" onclick="sortByDate()">Sort By date</button>
     </section>
     <section class="container text-center mb-4">
         <div class="spinner-border text-danger" role="status" id="loader">
