create li dynamik

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
     </section>
 </main>
 <footer>
-    <section class="container text-center" id="see-All">
-    
+    <section class="container text-center" id="see-All">   
         <button onclick="showAllDataTogether()" class="btn-danger btn btn-lg p-3 my-4" >
-            See ALL
+            See More
           </button>
     </section>
-
 </div> 
+<div id="container">
+</div>
+</button>
 </footer>
         <!-- js link goes here -->
     <script src="./script/api.js"></script>
